
- File names containing & and < were not properly being escaped when
  perspective.xml was being written.

- Some file names could not be opened because jEdit would mistake them
  for URLs (for example, "foo.bar:baz").

- the +line: and +marker: command line parameters moved the caret to
  the right position, but the text area was not always scrolled
  correctly.

}}}

}}}

{{{ Version 4.2pre15

Thanks to Adrian Baker, Bertalan Fodor, Eric Ladner, Justin Hagstrom,
Lionel Fiol, Nicholas O'Leary, Ollie Rutherfurd and Thomas Alspaugh for
contributing to this release.

{{{ License Change

A small amendment has been added to jEdit's license. It formally allows
development of non-GPL jEdit plugins. See doc/COPYING.PLUGINS.txt.

}}}
{{{ Syntax Highlighting

- Updated PHP syntax highlighting for PHP5 and PHPDoc (Justin Hagstrom).

- Updated PL/SQL syntax highlighting (Eric Ladner).

- Updated LaTeX syntax highlighting (Thomas Alspaugh).

- Added Lilypond syntax highlighting (Bertalan Fodor).

- Updated Omnimark syntax highlighting (Lionel Fiol).

- Added Groovy syntax highlighting (Ollie Rutherfurd).

- Added PTL syntax highlighting (Ollie Rutherfurd).

}}}
{{{ Miscellaneous

- More flexible remapping of modifier keys (Adrian Baker).

For example, this BeanShell snippet points both the ALT and META
modifiers to A+:

KeyEventTranslator.setModifierMapping(
    InputEvent.CTRL_MASK,
    InputEvent.ALT_MASK | InputEvent.META_MASK,
    0,
    InputEvent.SHIFT_MASK);

- "Java File Save", "Move Line Up", "Move Line Down" macros
  (Nicholas O'Leary).

}}}
{{{ Bug Fixes

- The rest.xml and embperl.xml mode files were missing from the
  distribution.

- HyperSearch results would not use floating positions if the files
  being searched were symbolic links.

- Findbugs suggests changing 'new Boolean(' to 'Boolean.valueOf(', so I
  changed all occurrences in pre14. However, the latter does not exist
  in JDK 1.3. This change was reverted.
